--- a/grid-layout/gird-basic.html
+++ b/grid-layout/gird-basic.html
@@ -15,11 +15,29 @@
 </head>
 
 <body>
-    </style>
     <div class="container style-grid">
         <div class="row">
-            <div class="col-md-8">Content</div>
-            <div class="col-md-4">Sidebar</div>
+            <div class="col-md-12">Header</div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">col-md-1</div>
+            <div class="col-md-6">col-md-1</div>
+            <div class="col-md-3">col-md-1</div>
+        </div>
+        <div class="row">
+            <div class="col-md-2">col-md-2</div>
+            <div class="col-md-2">col-md-2</div>
+            <div class="col-md-2">col-md-2</div>
+            <div class="col-md-2">col-md-2</div>
+            <div class="col-md-2">col-md-2</div>
+            <div class="col-md-2">col-md-2</div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">col-md-4</div>
+            <div class="col-md-2">col-md-2</div>
+            <div class="col-md-2">col-md-2</div>
+            <div class="col-md-2">col-md-2</div>
+            <div class="col-md-2">col-md-2</div>
         </div>
     </div>
 
