--- a/grid-layout/container-size.html
+++ b/grid-layout/container-size.html
@@ -11,11 +11,10 @@
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="bootstrap/css/grid-basic.css">
 
-    <title>Thực hành Gird Layout 3 cột với class Row và Col</title>
+    <title>Hello, world!</title>
 </head>
 
 <body>
-    <h1>Thực hành Gird Layout 3 cột với class Row và Col - File theo hướng dẫn của Thầy Cương</h1>
     <div id="wrapper">
         <div id="header">
             <div class="container">
