--- a/grid-layout/ex1.html
+++ b/grid-layout/ex1.html
@@ -11,10 +11,11 @@
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="bootstrap/css/grid-basic.css">
 
-    <title>Hello, world!</title>
+    <title>Thực hành Gird Layout 3 cột với class Row và Col</title>
 </head>
 
 <body>
+    <h1>Thực hành Gird Layout 3 cột với class Row và Col - File tự làm</h1>
     <div class="container bg-info">
         <div class="row bg-dark">
             <div class="col-md-12 text-white text-center">Header</div>
