--- a/grid-layout/container-size.html
+++ b/grid-layout/container-size.html
@@ -9,68 +9,102 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="bootstrap/css/grid-basic.css">
+    <link rel="stylesheet" href="/grid-layout/css/responsive.css">
 
     <title>Hello, world!</title>
 </head>
 
 <body>
-    <div id="wrapper">
-        <div id="header">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 bg-dark text-white text-center">Header</div>
-                </div>
+    <style>
+        .box p {
+            background-color: cornflowerblue;
+            padding: 10px;
+            margin: 1px solid;
+            color: white;
+        }
+    </style>
+    <div class="container">
+        <h1>Class Container</h1>
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
             </div>
         </div>
-
-        <!-- End header -->
-        <div id="wp-content">
-            <div class="container">
-                <div class="row">
-                    <div id="sidebar-left" class="col-md-2 bg-info">Sidebar left</div>
-                    <div id="content" class="col-md-8 bg-white text-justify">
-                        <h2>Lorem Ipsum là gì?</h2>
-                        <p>Lorem Ipsum chỉ đơn giản là một đoạn văn bản giả, được dùng vào việc trình bày và dàn trang
-                            phục vụ cho in ấn. Lorem Ipsum đã được sử dụng như một văn bản chuẩn cho ngành công nghiệp
-                            in ấn từ những năm 1500, khi một họa sĩ vô danh ghép nhiều đoạn văn bản với nhau để tạo
-                            thành một bản mẫu văn bản. Đoạn văn bản này không những đã tồn tại năm thế kỉ, mà khi được
-                            áp dụng vào tin học văn phòng, nội dung của nó vẫn không hề bị thay đổi. Nó đã được phổ biến
-                            trong những năm 1960 nhờ việc bán những bản giấy Letraset in những đoạn Lorem Ipsum, và gần
-                            đây hơn, được sử dụng trong các ứng dụng dàn trang, như Aldus PageMaker.</p>
-                        <p>Trái với quan điểm chung của số đông, Lorem Ipsum không phải chỉ là một đoạn văn bản ngẫu
-                            nhiên. Người ta tìm thấy nguồn gốc của nó từ những tác phẩm văn học la-tinh cổ điển xuất
-                            hiện từ năm 45 trước Công Nguyên, nghĩa là nó đã có khoảng hơn 2000 tuổi. Một giáo sư của
-                            trường Hampden-Sydney College (bang Virginia - Mỹ) quan tâm tới một trong những từ la-tinh
-                            khó hiểu nhất, "consectetur", trích từ một đoạn của Lorem Ipsum, và đã nghiên cứu tất cả các
-                            ứng dụng của từ này trong văn học cổ điển, để từ đó tìm ra nguồn gốc không thể chối cãi của
-                            Lorem Ipsum. Thật ra, nó được tìm thấy trong các đoạn 1.10.32 và 1.10.33 của "De Finibus
-                            Bonorum et Malorum" (Đỉnh tối thượng của Cái Tốt và Cái Xấu) viết bởi Cicero vào năm 45
-                            trước Công Nguyên. Cuốn sách này là một luận thuyết đạo lí rất phổ biến trong thời kì Phục
-                            Hưng. Dòng đầu tiên của Lorem Ipsum, "Lorem ipsum dolor sit amet..." được trích từ một câu
-                            trong đoạn thứ 1.10.32.</p>
-                        <p>Trích đoạn chuẩn của Lorem Ipsum được sử dụng từ thế kỉ thứ 16 và được tái bản sau đó cho
-                            những người quan tâm đến nó. Đoạn 1.10.32 và 1.10.33 trong cuốn "De Finibus Bonorum et
-                            Malorum" của Cicero cũng được tái bản lại theo đúng cấu trúc gốc, kèm theo phiên bản tiếng
-                            Anh được dịch bởi H. Rackham vào năm 1914.</p>
-                    </div>
-                    <div id="sidebar-right" class="col-md-2 bg-info">Sidebar right</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- End content -->
-        <div id="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 bg-dark text-white text-center">Footer</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- End footer -->
     </div>
-
+    <div class="container-fluid">
+        <h1>Class Container-Fluid</h1>
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 box">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi voluptates, fuga quae consequuntur commodi tenetur molestiae numquam? Sint, est?</p>
+            </div>
+        </div>
+    </div>
 
 
 
