--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 Container-fluid</a>
         </li>
         <li>
-            <a href="./grid-layout/gird-basic.html">Gird-basic</a>
+            <a href="./grid-layout/box-in-box.html">Box-in-box - Khối lồng vào khối</a>
         </li>
         <li>
             <a href="./grid-layout/gird-basic.html">Gird-basic</a>
