--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="./grid-layout/box-in-box.html">Box-in-box - Khối lồng vào khối</a>
         </li>
         <li>
-            <a href="./grid-layout/gird-basic.html">Gird-basic</a>
+            <a href="./grid-layout/no-gutters.html">No-gutters - Xóa Padding giữa các cột</a>
         </li>
         <li>
             <a href="./grid-layout/gird-basic.html">Gird-basic</a>
