--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <a href="./grid-layout/no-gutters.html">No-gutters - Xóa Padding giữa các cột</a>
         </li>
         <li>
-            <a href="./grid-layout/gird-basic.html">Gird-basic</a>
+            <a href="./text-images/heading.html">Heading - Nhóm class định dạng thẻ tiêu đề heading</a>
         </li>
         <li>
-            <a href="./grid-layout/gird-basic.html">Gird-basic</a>
+            <a href="./text-images/text-align.html">Text-align - Nhóm class căn chỉnh text</a>
         </li>
     </ul>
 
