--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <li>
             <a href="./text-images/text-align.html">Text-align - Nhóm class căn chỉnh text</a>
         </li>
+        <li>
+            <a href="./text-images/text-color.html">Text-color - Nhóm 13 class format màu chữ trong bootstrap</a>
+        </li>
     </ul>
 
 
