--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <ul>
-        <h1>Thực hành khóa học Bootstrap từ A đến Z - Unitop.vn</h1>
-        <h3>Ghi chú: bấm vào link để xem, bấm Ctrl + U để xem Source code</h3>
+        <h1 class="text-center text-primary">Thực hành khóa học Bootstrap từ A đến Z - Unitop.vn</h1>
+        <h3 class="text-center text-info">Ghi chú: bấm vào link để xem, bấm Ctrl + U để xem Source code</h3>
         <li>
             <a href="./grid-layout/standard.html">Standard - Fiel đã cài Bootstrap chuẩn</a>
         </li>
@@ -51,13 +51,28 @@
             <a href="./grid-layout/no-gutters.html">No-gutters - Xóa Padding giữa các cột</a>
         </li>
         <li>
-            <a href="./text-images/heading.html">Heading - Nhóm class định dạng thẻ tiêu đề heading</a>
+            <a href="./text-images/heading.html">3.1. Heading - Định dạng hiển thị tiêu đề Heading</a>
         </li>
         <li>
-            <a href="./text-images/text-align.html">Text-align - Nhóm class căn chỉnh text</a>
+            <a href="./text-images/text-align.html">3.2. Text-align - nhóm class căn chỉnh text: left, center, right, justify</a>
         </li>
         <li>
-            <a href="./text-images/text-color.html">Text-color - Nhóm 13 class format màu chữ trong bootstrap</a>
+            <a href="./text-images/text-color.html">3.3. Text-color nhóm class tùy chỉnh màu sắc text</a>
+        </li>
+        <li>
+            <a href="./text-images/text-color.html">3.4. Text-color nhóm class tùy chỉnh màu sắc text</a>
+        </li>
+        <li>
+            <a href="./text-images/text-color.html">3.5. Text-color nhóm class tùy chỉnh màu sắc text</a>
+        </li>
+        <li>
+            <a href="./text-images/text-color.html">3.6. Text-color nhóm class tùy chỉnh màu sắc text</a>
+        </li>
+        <li>
+            <a href="./text-images/text-color.html">3.7. Text-color nhóm class tùy chỉnh màu sắc text</a>
+        </li>
+        <li>
+            <a href="./text-images/images.html">3.8. Nhóm class xây dựng hình ảnh responsive</a>
         </li>
     </ul>
 
