--- a/text-images/images.html
+++ b/text-images/images.html
@@ -20,9 +20,20 @@
             <div class="col-md-12">
                 <h2 class="text-center text-primary">Bài viết sử dụng class "img-fluid" và "rounded"</h2>
                 <div id="post-content">
-                    <p class="text-justify text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas perferendis quod dolorum itaque a sed, quia, totam obcaecati, aliquid blanditiis sit esse aperiam distinctio numquam! Illo consectetur hic odio, ad cum minus quibusdam est sapiente facilis totam, id illum repellendus reiciendis mollitia quae et vitae eveniet omnis ex quo eligendi?</p>
-                    <img class="img-fluid rounded" src="/text-images/images/hoc-sinh-large-size.jfif" alt="Hình ảnh học sinh">
-                    <p class="text-justify text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti at explicabo vitae culpa fugiat, aut laudantium sapiente eum ipsum nihil, laborum, voluptas dolores consectetur adipisci nam consequuntur nostrum quidem eveniet necessitatibus architecto saepe recusandae debitis dolorum cupiditate? Nesciunt porro delectus aspernatur accusantium architecto atque repellendus quod cum. Incidunt, delectus perferendis.</p>
+                    <p class="text-justify text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+                        perferendis quod dolorum itaque a sed, quia, totam obcaecati, aliquid blanditiis sit esse
+                        aperiam distinctio numquam! Illo consectetur hic odio, ad cum minus quibusdam est sapiente
+                        facilis totam, id illum repellendus reiciendis mollitia quae et vitae eveniet omnis ex quo
+                        eligendi?</p>
+                    <div class="text-center width-700">
+                        <img class="img-fluid rounded" src="/text-images/images/hoc-sinh-large-size.jfif"
+                            alt="Hình ảnh học sinh" width="720">
+                    </div>
+                    <p class="text-justify text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+                        at explicabo vitae culpa fugiat, aut laudantium sapiente eum ipsum nihil, laborum, voluptas
+                        dolores consectetur adipisci nam consequuntur nostrum quidem eveniet necessitatibus architecto
+                        saepe recusandae debitis dolorum cupiditate? Nesciunt porro delectus aspernatur accusantium
+                        architecto atque repellendus quod cum. Incidunt, delectus perferendis.</p>
                 </div>
             </div>
         </div>
