--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
         <li>
             <a href="./text-images/images.html">3.8. Nhóm class xây dựng hình ảnh responsive</a>
         </li>
+        <li>
+            <a href="./box/border.html">4.2. Border nhóm class tùy chỉnh đường viền khối</a>
+        </li>
+        <li>
+            <a href="./box/rounded.html">4.3. Rounded nhóm class tùy chỉnh bo góc tròn khối</a>
+        </li>
     </ul>
 
 
