--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
         <li>
             <a href="./box/rounded.html">4.3. Rounded nhóm class tùy chỉnh bo góc tròn khối</a>
         </li>
+        <li>
+            <a href="./box/display.html">4.4. Display Nhóm class tùy chỉnh chế độ hiển thị</a>
+        </li>
     </ul>
 
 
