--- a/text-images/images.html
+++ b/text-images/images.html
@@ -41,19 +41,19 @@
         <div class="row">
             <div class="col-md-3">
                 <a href=""><img class="img-thumbnail" src="images/hoc-sinh-large-size.jfif" alt=""></a>
+                <a class="text-center" href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nobis!</a>
+            </div>
+            <div class="col-md-3">
+                <a class="text-center" href=""><img class="img-thumbnail" src="images/hoc-sinh-large-size.jfif" alt=""></a>
                 <a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nobis!</a>
             </div>
             <div class="col-md-3">
                 <a href=""><img class="img-thumbnail" src="images/hoc-sinh-large-size.jfif" alt=""></a>
-                <a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nobis!</a>
+                <a class="text-center" href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nobis!</a>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 text-center text-info">
                 <a href=""><img class="img-thumbnail" src="images/hoc-sinh-large-size.jfif" alt=""></a>
-                <a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nobis!</a>
-            </div>
-            <div class="col-md-3">
-                <a href=""><img class="img-thumbnail" src="images/hoc-sinh-large-size.jfif" alt=""></a>
-                <a href="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, nobis!</a>
+                <a href="">Tempore, nobis!</a>
             </div>
         </div>
     </div>
